# wasi-zxing-wasm

./: CMakeLists.txt  README.md  generate_barcode.cpp  wapm.toml
zxing/: BitArray.cpp  BitMatrix.cpp  BitSource.cpp  GenericGF.h  GenericGFPoly.cpp  GenericLuminanceSource.cpp  GridSampler.cpp  LuminanceSource.cpp  MultiFormatWriter.cpp  ReedSolomonDecoder.cpp  ReedSolomonEncoder.cpp  TextEncoder.cpp  ZXNullable.h
zxing/aztec/: AZEncoder.cpp
zxing/datamatrix/: DMBitMatrixParser.cpp  DMECEncoder.cpp  DMEncoderContext.h  DMHighLevelEncoder.cpp  DMSymbolInfo.cpp  DMWriter.cpp
zxing/oned/: ODCodabarWriter.cpp  ODCode128Writer.cpp  ODCode39Writer.cpp  ODCode93Writer.cpp  ODITFWriter.cpp  ODUPCAWriter.cpp  ODUPCEANCommon.h  ODUPCEWriter.cpp
zxing/oned/rss/: ODRSSGenericAppIdDecoder.cpp
zxing/pdf417/: PDFDetectionResultColumn.cpp  PDFEncoder.cpp  PDFHighLevelEncoder.cpp  PDFModulusGF.cpp  PDFModulusGF.h  PDFModulusPoly.cpp
zxing/qrcode/: QRCodecMode.cpp  QRDataMask.cpp  QRDecoder.cpp  QREncoder.cpp  QRMatrixUtil.cpp  QRWriter.cpp
